--- a/src/content/blog/the-unfortunate-overhyping-of-ai.mdx
+++ b/src/content/blog/the-unfortunate-overhyping-of-ai.mdx
@@ -4,10 +4,12 @@ description: AI has revolutionized the world in profound ways. But it's being po
 created: 02-26-2025
 updated: 02-26-2025
 image: "../../images/the-unfortunate-overhyping-of-ai.jpeg"
-image_source: AI Generated
+image_source: Generated using Bing Image Creator
 author: naparajith
 draft: false
 ---
+
+import A from "@/components/A.astro";
 
 Over the past few years, AI has made tremendous progress in innovation and growth, with the industry adopting it at an unprecedented rate. The release of ChatGPT 3.5 in 2023 marked a significant shift in how AI is perceived and used. The world has not been the same since.
 
@@ -23,11 +25,11 @@ In short, AI has made the average computer engineer's life much easier.
 
 However, this growth has also led to a host of doomsday predictions. Many people believe that AI will take over the world, replace human jobs, and even break through our safety nets and defense systems. These predictions are not only alarming but also unrealistic.
 
-There have been curious cases of AI "hallucination" or AI "bypassing training safeguards", like when Microsoft CoPilot asked a journalist to leave their wife or Google Gemini asked people to consume rocks as food. Or even the <a href="https://www.businessinsider.com/interview-with-sophia-ai-robot-hanson-said-it-would-destroy-humans-2017-11" target="_blank">curious case</a> of Sophia, who once said some "interesting" things.
+There have been curious cases of AI "hallucination" or AI "bypassing training safeguards", like when Microsoft CoPilot asked a journalist to leave their wife or Google Gemini asked people to consume rocks as food. Or even the <A href="https://www.businessinsider.com/interview-with-sophia-ai-robot-hanson-said-it-would-destroy-humans-2017-11" target="_blank">curious case</A> of Sophia, who once said some "interesting" things.
 
 But it is very hard to say what the future holds when we are still in the early stages of understanding and developing AI. We aren't close to getting the answers to our questions without hallucinations, let alone an AGI that wants to do "questionable" things to humans.
 
-Researchers have been taking the appropriate precautions to ensure that we cut out the issues at the source and early on, before it becomes too serious and too big to be dealt with effectively. For a sample, you might want to read OpenAI's <a href="https://openai.com/index/operator-system-card/" target="_blank">Operator System Cards</a>, <a href="https://openai.com/index/deep-research-system-card/" target="_blank">Deep Research System Cards</a> and how they take AI safety very seriously.
+Researchers have been taking the appropriate precautions to ensure that we cut out the issues at the source and early on, before it becomes too serious and too big to be dealt with effectively. For a sample, you might want to read OpenAI's <A href="https://openai.com/index/operator-system-card/" target="_blank">Operator System Cards</A>, <A href="https://openai.com/index/deep-research-system-card/" target="_blank">Deep Research System Cards</A> and how they take AI safety very seriously.
 
 ## Setting the stage
 
