--- a/src/content/license/code.mdx
+++ b/src/content/license/code.mdx
@@ -4,31 +4,29 @@ license_name: GNU AFFERO GENERAL PUBLIC LICENSE
 description: The formal license for the codebase.
 ---
 
-<!--
-This website is only meant to showcase the work and and skills of the author,
-on a professional level. It also has a blog, containing the author's observations
-and opinions on various topics. The views expressed are the author's own.
-Copyright (C) 2024  T L Naparajith
+{/* This website is only meant to showcase the work and and skills of the
+author, on a professional level. It also has a blog, containing the author's
+observations and opinions on various topics. The views expressed are the
+author's own. Copyright (C) 2024 T L Naparajith
 
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU Affero General Public License Version 3 as published
-by the Free Software Foundation.
+This program is free software: you can redistribute it and/or modify it under
+the terms of the GNU Affero General Public License Version 3 as published by the
+Free Software Foundation.
 
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU Affero General Public License for more details.
+This program is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
 
-You should have received a copy of the GNU Affero General Public License
-along with this program.  If not, see <https://www.gnu.org/licenses/agpl-3.0.txt>.
+You should have received a copy of the GNU Affero General Public License along
+with this program. If not, see <https://www.gnu.org/licenses/agpl-3.0.txt>.
 
-Contact me through electronic mail: <naparajith@duck.com>
--->
+Contact me through electronic mail: <naparajith@duck.com> */}
+
+import A from "@/components/A.astro";
 
 Version 3, 19 November 2007
 
-Copyright (C) 2007 Free Software Foundation, Inc.
-[https://fsf.org/](https://fsf.org/)
+Copyright (C) 2007 <A href="https://fsf.org/" target="_blank" title="Free Software Foundation, Inc.">Free Software Foundation, Inc.</A>
 
 Everyone is permitted to copy and distribute verbatim copies of this license
 document, but changing it is not allowed.
