--- a/src/content/license/content.mdx
+++ b/src/content/license/content.mdx
@@ -1,42 +1,41 @@
 ---
-title: Site-wide Images License
-license_name: CC BY-NC-ND 4.0 International
-description: The formal license for site images
+title: Site-wide Content License
+license_name: CC BY-NC-SA 4.0 International
+description: The formal license for the site content.
 ---
 
-<!--
-This website is only meant to showcase the work and and skills of the author,
-on a professional level. It also has a blog, containing the author's observations
-and opinions on various topics. The views expressed are the author's own.
-Copyright (C) 2024  T L Naparajith
+{/* This website is only meant to showcase the work and and skills of the
+author, on a professional level. It also has a blog, containing the author's
+observations and opinions on various topics. The views expressed are the
+author's own. Copyright (C) 2024 T L Naparajith
 
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU Affero General Public License Version 3 as published
-by the Free Software Foundation.
+This program is free software: you can redistribute it and/or modify it under
+the terms of the GNU Affero General Public License Version 3 as published by the
+Free Software Foundation.
 
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU Affero General Public License for more details.
+This program is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
 
-You should have received a copy of the GNU Affero General Public License
-along with this program.  If not, see <https://www.gnu.org/licenses/agpl-3.0.txt>.
+You should have received a copy of the GNU Affero General Public License along
+with this program. If not, see <https://www.gnu.org/licenses/agpl-3.0.txt>.
 
-Contact me through electronic mail: <naparajith@duck.com>
--->
+Contact me through electronic mail: <naparajith@duck.com> */}
 
-## Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International Public License
+import A from "@/components/A.astro";
+
+## Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International Public License
 
 By exercising the Licensed Rights (defined below), You accept and agree to be
 bound by the terms and conditions of this Creative Commons
-Attribution-NonCommercial-NoDerivatives 4.0 International Public License
-("Public License"). To the extent this Public License may be interpreted as a
-contract, You are granted the Licensed Rights in consideration of Your
-acceptance of these terms and conditions, and the Licensor grants You such
-rights in consideration of benefits the Licensor receives from making the
-Licensed Material available under these terms and conditions.
+Attribution-NonCommercial-ShareAlike 4.0 International Public License ("Public
+License"). To the extent this Public License may be interpreted as a contract,
+You are granted the Licensed Rights in consideration of Your acceptance of these
+terms and conditions, and the Licensor grants You such rights in consideration
+of benefits the Licensor receives from making the Licensed Material available
+under these terms and conditions.
 
-### Section 1 – Definitions
+### Section 1 - Definitions
 
 a. **Adapted Material** means material subject to Copyright and Similar Rights
 that is derived from or based upon the Licensed Material and in which the
@@ -47,7 +46,16 @@ Material is a musical work, performance, or sound recording, Adapted Material is
 always produced where the Licensed Material is synched in timed relation with a
 moving image.
 
-b. **Copyright and Similar Rights** means copyright and/or similar rights
+b. **Adapter's License** means the license You apply to Your Copyright and
+Similar Rights in Your contributions to Adapted Material in accordance with the
+terms and conditions of this Public License.
+
+c. **BY-NC-SA Compatible License** means a license listed at
+[creativecommons.org/compatiblelicenses](http://creativecommons.org/compatiblelicenses),
+approved by Creative Commons as essentially the equivalent of this Public
+License.
+
+d. **Copyright and Similar Rights** means copyright and/or similar rights
 closely related to copyright including, without limitation, performance,
 broadcast, sound recording, and Sui Generis Database Rights, without regard to
 how the rights are labeled or categorized. For purposes of this Public License,
@@ -63,6 +71,10 @@ f. **Exceptions and Limitations** means fair use, fair dealing, and/or any other
 exception or limitation to Copyright and Similar Rights that applies to Your use
 of the Licensed Material.
 
+g. **License Elements** means the license attributes listed in the name of a
+Creative Commons Public License. The License Elements of this Public License are
+Attribution, NonCommercial, and ShareAlike.
+
 h. **Licensed Material** means the artistic or literary work, database, or other
 material to which the Licensor applied this Public License.
 
@@ -71,34 +83,34 @@ conditions of this Public License, which are limited to all Copyright and
 Similar Rights that apply to Your use of the Licensed Material and that the
 Licensor has authority to license.
 
-h. **Licensor** means the individual(s) or entity(ies) granting rights under
+j. **Licensor** means the individual(s) or entity(ies) granting rights under
 this Public License.
 
-i. **NonCommercial** means not primarily intended for or directed towards
+k. **NonCommercial** means not primarily intended for or directed towards
 commercial advantage or monetary compensation. For purposes of this Public
 License, the exchange of the Licensed Material for other material subject to
 Copyright and Similar Rights by digital file-sharing or similar means is
 NonCommercial provided there is no payment of monetary compensation in
 connection with the exchange.
 
-j. **Share** means to provide material to the public by any means or process
+l. **Share** means to provide material to the public by any means or process
 that requires permission under the Licensed Rights, such as reproduction, public
 display, public performance, distribution, dissemination, communication, or
 importation, and to make material available to the public including in ways that
 members of the public may access the material from a place and at a time
 individually chosen by them.
 
-k. **Sui Generis Database Rights** means rights other than copyright resulting
+m. **Sui Generis Database Rights** means rights other than copyright resulting
 from Directive 96/9/EC of the European Parliament and of the Council of 11 March
 1996 on the legal protection of databases, as amended and/or succeeded, as well
 as other essentially equivalent rights anywhere in the world.
 
-l. **You** means the individual or entity exercising the Licensed Rights under
+n. **You** means the individual or entity exercising the Licensed Rights under
 this Public License. **Your** has a corresponding meaning.
 
-### Section 2 – Scope
+### Section 2 - Scope
 
-a. _**License grant.**_
+a. **_License grant._**
 
 1. Subject to the terms and conditions of this Public License, the Licensor
    hereby grants You a worldwide, royalty-free, non-sublicensable,
@@ -108,8 +120,8 @@ a. _**License grant.**_
    A. reproduce and Share the Licensed Material, in whole or in part, for
    NonCommercial purposes only; and
 
-   B. produce and reproduce, but not Share, Adapted Material for NonCommercial
-   purposes only.
+   B. produce, reproduce, and Share Adapted Material for NonCommercial purposes
+   only.
 
 2. **Exceptions and Limitations.** For the avoidance of doubt, where Exceptions
    and Limitations apply to Your use, this Public License does not apply, and
@@ -129,12 +141,17 @@ a. _**License grant.**_
 
 5. **Downstream recipients.**
 
-   A. **Offer from the Licensor – Licensed Material.** Every recipient of the
+   A. **Offer from the Licensor - Licensed Material.** Every recipient of the
    Licensed Material automatically receives an offer from the Licensor to
    exercise the Licensed Rights under the terms and conditions of this Public
    License.
 
-   B. **No downstream restrictions.** You may not offer or impose any additional
+   B. **Additional offer from the Licensor - Adapted Material.** Every recipient
+   of Adapted Material from You automatically receives an offer from the
+   Licensor to exercise the Licensed Rights in the Adapted Material under the
+   conditions of the Adapter’s License You apply.
+
+   C. **No downstream restrictions.** You may not offer or impose any additional
    or different terms or conditions on, or apply any Effective Technological
    Measures to, the Licensed Material if doing so restricts exercise of the
    Licensed Rights by any recipient of the Licensed Material.
@@ -145,7 +162,7 @@ a. _**License grant.**_
    official status by, the Licensor or others designated to receive attribution
    as provided in Section 3(a)(1)(A)(i).
 
-b. _**Other rights.**_
+b. **_Other rights._**
 
 1. Moral rights, such as the right of integrity, are not licensed under this
    Public License, nor are publicity, privacy, and/or other similar personality
@@ -162,14 +179,14 @@ b. _**Other rights.**_
    right to collect such royalties, including when the Licensed Material is used
    other than for NonCommercial purposes.
 
-### Section 3 – License Conditions
+### Section 3 - License Conditions
 
 Your exercise of the Licensed Rights is expressly made subject to the following
 conditions.
 
-a. _**Attribution.**_
+a. **_Attribution._**
 
-1. If You Share the Licensed Material, You must:
+1. If You Share the Licensed Material (including in modified form), You must:
 
    A. retain the following if it is supplied by the Licensor with the Licensed
    Material:
@@ -193,9 +210,6 @@ a. _**Attribution.**_
    C. indicate the Licensed Material is licensed under this Public License, and
    include the text of, or the URI or hyperlink to, this Public License.
 
-   For the avoidance of doubt, You do not have permission under this Public
-   License to Share Adapted Material.
-
 2. You may satisfy the conditions in Section 3(a)(1) in any reasonable manner
    based on the medium, means, and context in which You Share the Licensed
    Material. For example, it may be reasonable to satisfy the conditions by
@@ -205,20 +219,37 @@ a. _**Attribution.**_
 3. If requested by the Licensor, You must remove any of the information required
    by Section 3(a)(1)(A) to the extent reasonably practicable.
 
-### Section 4 – Sui Generis Database Rights
+b. **_ShareAlike._**
+
+In addition to the conditions in Section 3(a), if You Share Adapted Material You
+produce, the following conditions also apply.
+
+1. The Adapter’s License You apply must be a Creative Commons license with the
+   same License Elements, this version or later, or a BY-NC-SA Compatible
+   License.
+
+2. You must include the text of, or the URI or hyperlink to, the Adapter's
+   License You apply. You may satisfy this condition in any reasonable manner
+   based on the medium, means, and context in which You Share Adapted Material.
+
+3. You may not offer or impose any additional or different terms or conditions
+   on, or apply any Effective Technological Measures to, Adapted Material that
+   restrict exercise of the rights granted under the Adapter's License You
+   apply.
+
+### Section 4 - Sui Generis Database Rights
 
 Where the Licensed Rights include Sui Generis Database Rights that apply to Your
 use of the Licensed Material:
 
 a. for the avoidance of doubt, Section 2(a)(1) grants You the right to extract,
 reuse, reproduce, and Share all or a substantial portion of the contents of the
-database for NonCommercial purposes only and provided You do not Share Adapted
-Material;
+database for NonCommercial purposes only;
 
 b. if You include all or a substantial portion of the database contents in a
 database in which You have Sui Generis Database Rights, then the database in
 which You have Sui Generis Database Rights (but not its individual contents) is
-Adapted Material; and
+Adapted Material, including for purposes of Section 3(b); and
 
 c. You must comply with the conditions in Section 3(a) if You Share all or a
 substantial portion of the contents of the database.
@@ -227,7 +258,7 @@ For the avoidance of doubt, this Section 4 supplements and does not replace Your
 obligations under this Public License where the Licensed Rights include other
 Copyright and Similar Rights.
 
-### Section 5 – Disclaimer of Warranties and Limitation of Liability
+### Section 5 - Disclaimer of Warranties and Limitation of Liability
 
 a. **Unless otherwise separately undertaken by the Licensor, to the extent
 possible, the Licensor offers the Licensed Material as-is and as-available, and
@@ -252,7 +283,7 @@ c. The disclaimer of warranties and limitation of liability provided above shall
 be interpreted in a manner that, to the extent possible, most closely
 approximates an absolute disclaimer and waiver of all liability.
 
-### Section 6 – Term and Termination
+### Section 6 - Term and Termination
 
 a. This Public License applies for the term of the Copyright and Similar Rights
 licensed here. However, if You fail to comply with this Public License, then
@@ -275,7 +306,7 @@ any time; however, doing so will not terminate this Public License.
 
 d. Sections 1, 5, 6, 7, and 8 survive termination of this Public License.
 
-### Section 7 – Other Terms and Conditions
+### Section 7 - Other Terms and Conditions
 
 a. The Licensor shall not be bound by any additional or different terms or
 conditions communicated by You unless expressly agreed.
@@ -284,7 +315,7 @@ b. Any arrangements, understandings, or agreements regarding the Licensed
 Material not stated herein are separate from and independent of the terms and
 conditions of this Public License.
 
-### Section 8 – Interpretation
+### Section 8 - Interpretation
 
 a. For the avoidance of doubt, this Public License does not, and shall not be
 interpreted to, reduce, limit, restrict, or impose conditions on any use of the
@@ -310,18 +341,16 @@ authority.
 > publishes and in those instances will be considered the “Licensor.” The text
 > of the Creative Commons public licenses is dedicated to the public domain
 > under the CC0 Public Domain Dedication. The text of the Creative Commons
-> public licenses is dedicated to the public domain under the
-> [CC0 Public Domain Dedication](https://creativecommons.org/publicdomain/zero/1.0/legalcode).
+> public licenses is dedicated to the public domain under the <A href="https://creativecommons.org/publicdomain/zero/1.0/legalcode" target="_blank" title="CC0 Public Domain Dedication">CC0 Public Domain Dedication.</A>
 > Except for the limited purpose of indicating that material is shared under a
 > Creative Commons public license or as otherwise permitted by the Creative
-> Commons policies published at
-> [creativecommons.org/policies](http://creativecommons.org/policies), Creative
-> Commons does not authorize the use of the trademark “Creative Commons” or any
-> other trademark or logo of Creative Commons without its prior written consent
-> including, without limitation, in connection with any unauthorized
-> modifications to any of its public licenses or any other arrangements,
-> understandings, or agreements concerning use of licensed material. For the
-> avoidance of doubt, this paragraph does not form part of the public licenses.
+> Commons policies published at <A href="http://creativecommons.org/policies" target="_blank" title="Creative Commons Policies">creativecommons.org/policies</A>,
+> Creative Commons does not authorize the use of the trademark “Creative
+> Commons” or any other trademark or logo of Creative Commons without its prior
+> written consent including, without limitation, in connection with any
+> unauthorized modifications to any of its public licenses or any other
+> arrangements, understandings, or agreements concerning use of licensed
+> material. For the avoidance of doubt, this paragraph does not form part of the
+> public licenses.
 >
-> Creative Commons may be contacted at
-> [creativecommons.org](http://creativecommons.org).
+> Creative Commons may be contacted at <A href="http://creativecommons.org" target="_target" title="Creative Commons Website" >creativecommons.org.</A>
