--- a/src/content/policy/privacy-policy.mdx
+++ b/src/content/policy/privacy-policy.mdx
@@ -23,3 +23,5 @@ with this program. If not, see <https://www.gnu.org/licenses/agpl-3.0.txt>.
 
 Contact me through electronic mail: <naparajith@duck.com> */}
 
+Page under active development
+
