feat: updates to policy page

--- a/src/content/policy/content-policy.mdx
+++ b/src/content/policy/content-policy.mdx
@@ -25,3 +25,54 @@ Contact me through electronic mail: <naparajith@duck.com> */}
 
 Page under active development
 
+import A from "@/components/A.astro";
+
+## Purpose
+
+The purpose of this policy is to inform the user that a strict content policy is used across my website and there are no
+restrictions on viewing and re-distributing it. By adhering to a strict content guideline, I am able to ensure that there is
+a reasonable amount of integrity and authenticity within my website.
+
+This policy establishes my commitment to respecting the open source ethos and
+contributing back to the community where possible. It will provide me with a
+clear understanding of how to appropriately incorporate FOSS JavaScript into my
+project while maintaining the intended spirit of open source software.
+
+## Scope
+
+This policy applies to the use of free and unrestricted FOSS JavaScript across
+my entire website project. I am committed to exclusively using FOSS JavaScript
+components that have the most permissive licenses, such as MIT, Apache, or BSD,
+which allow for unrestricted use, modification, and distribution.
+
+The policy does not constrain the use of FOSS JavaScript for internal or
+external purposes. I am free to incorporate any FOSS JavaScript libraries,
+frameworks, or utilities that meet the criteria of being free and unrestricted,
+without the need for additional approval or compliance procedures.
+
+My goal is to leverage the vast ecosystem of open source JavaScript to create a
+robust and feature-rich website for my users, while respecting the open source
+principles of freedom and collaboration.
+
+## Terms and Abbreviations
+
+| Term                          | Abbreviation  |
+| ----------------------------- | ------------- |
+| JavaScript                    | **JS**        |
+| kB                            | **KiloBytes** |
+| Free and Open Source Software | **FOSS**      |
+
+## Policy
+
+This is a portfolio website. The content and views present here are purely meant
+to showcase my work, skills and abilities. They are my own and do not reflect
+the views and positions any organisation or entity I work with or have
+previously worked with. The source code for this site is remotely hosted as a
+repository on GitHub. The site is deployed, hosted and distributed using Vercel.
+
+## Feedback and Future Revisions
+
+Suggestions for improvement of this policy along with the necessary site wide
+changes will be appreciated. Please send comments to
+[naparajith@duck.com](mailto:naparajith@duck.com). Feedback provided is
+confidential and will not be used for any other purpose.
