--- a/src/content/policy/privacy-policy.mdx
+++ b/src/content/policy/privacy-policy.mdx
@@ -25,3 +25,42 @@ Contact me through electronic mail: <naparajith@duck.com> */}
 
 Page under active development
 
+## API Policy
+
+This site references several third-party APIs to provide a better overall
+experience. An exhaustive list of such services may be found below:
+
+1. GitHub REST API
+2. LeetCode GraphQL API
+
+## Link Policy
+
+Across the site, I have linked to various internal and external sources. I
+follow a set of policies while linking you to said sources. The policies are
+listed below.
+
+### Links to Internal Sources
+
+1. All links within the website do not have any type of analytics or tracking
+   embedded.
+2. With internal links, what you see is what you get.
+3. Some JS may be fetched and executed to ensure a smooth and consistent
+   experience.
+4. The site and its various pages contain no NSFW or explicit content. All
+   content adheres to a strict code.
+
+### Links to External Sources
+
+1. Any and all mentioned external links may contain non-free, commercial
+   JavaScript for cookies, analytics and tracking.
+2. I neither endorse nor reject any linked sites, their owners, their business
+   models, their personal or their political views unless explicitly stated.
+3. Externally linked sources may contain text, images or videos that may or may
+   not suite the viewer. Either way, I take zero responsibility for appealing to
+   or hurting the viewer's sentiments.
+4. No external links link to NSFW or explicit content. All content adheres to a
+   strict code.
+
+## Artificial Intelligence Policy
+
+![Brainmade.org](https://brainmade.org/white-logo.svg)
