refactor: tools page
- Change file type to .mdx
- Added additional tools I use
- Removed unwanted specifics in OS Section

--- a/src/content/profile/tools.mdx
+++ b/src/content/profile/tools.mdx
@@ -27,23 +27,23 @@ A collection of hardware and software tools that I use on a daily basis.
 
 ### Operating System
 
-| Software               | Details                 |
-| ---------------------- | ----------------------- |
-| Operating System       | Arch Linux              |
-| KDE Plasma Version     | 6.3.4                   |
-| KDE Frameworks Version | 6.12.0                  |
-| Qt Version             | 6.9.0                   |
-| Kernel Version         | 6.14.2-arch1-1 (64-bit) |
-| Graphics Platform      | Wayland                 |
+| Software              | Details         |
+| --------------------- | --------------- |
+| Operating System      | Arch Linux      |
+| Desktop Environment   | KDE Plasma 6    |
+| UI Framework          | Kirigami        |
+| Development Framework | Qt Framework    |
+| Linux Kernel          | Stable (64-bit) |
+| Graphics Platform     | Wayland         |
 
 ### Hardware
 
 | Hardware             | Details                                         |
 | -------------------- | ----------------------------------------------- |
-| Processors           | 8 × 11th Gen Intel® Core™ i7-1165G7 @ 2.80GHz   |
+| Processors           | 8 × 11th Gen Intel® Core™ i7-1165G7 @ 2.80GHz |
 | Memory               | 15.4 GiB of RAM                                 |
-| Graphics Processor 1 | Intel® Iris® Xe MAX Graphics (discrete)         |
-| Graphics Processor 2 | Intel® Iris® Xe Graphics (integrated)           |
+| Graphics Processor 1 | Intel® Iris® Xe MAX Graphics (discrete)       |
+| Graphics Processor 2 | Intel® Iris® Xe Graphics (integrated)         |
 | Manufacturer         | Acer                                            |
 | Product Name         | Swift SF314-510G                                |
 | System Version       | V1.12                                           |
@@ -82,13 +82,25 @@ A collection of hardware and software tools that I use on a daily basis.
 | PhotoGIMP          | Photo Editor     |
 | Obsidian           | Note Taking Tool |
 | Visual Studio Code | Code Editor      |
+| Thunderbird        | Email Client     |
+
+### TUIs
+
+| Software   | Category             |
+| ---------- | -------------------- |
+| Neovim     | Text Editor          |
+| LazyGit    | Git Client           |
+| LazyDocker | Docker Client        |
+| zellij     | Terminal Multiplexer |
 
 ### Shell Tools
 
-| Software | Purpose               |
-| -------- | --------------------- |
-| eza      | ls alternative        |
-| fzf      | Terminal Fuzzy Finder |
-| man      | Command Manual        |
-| ripgrep  | grep alternative      |
-| zoxide   | cd alternative        |
+| Software | Purpose                |
+| -------- | ---------------------- |
+| eza      | ls alternative         |
+| fzf      | Terminal Fuzzy Finder  |
+| man      | Command Manual         |
+| ripgrep  | grep alternative       |
+| zoxide   | cd alternative         |
+| yay      | AUR Package Manager    |
+| git      | Version Control System |
