fix: updated policy content

--- a/src/content/policy/content-policy.mdx
+++ b/src/content/policy/content-policy.mdx
@@ -29,14 +29,11 @@ import A from "@/components/A.astro";
 
 ## Purpose
 
-The purpose of this policy is to inform the user that a strict content policy is used across my website and there are no
-restrictions on viewing and re-distributing it. By adhering to a strict content guideline, I am able to ensure that there is
-a reasonable amount of integrity and authenticity within my website.
-
-This policy establishes my commitment to respecting the open source ethos and
-contributing back to the community where possible. It will provide me with a
-clear understanding of how to appropriately incorporate FOSS JavaScript into my
-project while maintaining the intended spirit of open source software.
+The purpose of this policy is to inform the user that a strict content policy is
+used across my website and there are no restrictions on viewing and
+re-distributing it. By adhering to a strict content guideline, I am able to
+ensure that there is a reasonable amount of integrity and authenticity within my
+website.
 
 ## Scope
 
