--- a/src/content/policy/js-policy.mdx
+++ b/src/content/policy/js-policy.mdx
@@ -2,7 +2,7 @@
 title: JavaScript Policy
 description: The official JavaScript Policy for Naparajith's Portfolio
 created: 03-18-2025
-updated: 03-18-2025
+updated: 05-18-2025
 ---
 
 {/* This website is only meant to showcase the work and and skills of the
@@ -22,8 +22,6 @@ You should have received a copy of the GNU Affero General Public License along
 with this program. If not, see <https://www.gnu.org/licenses/agpl-3.0.txt>.
 
 Contact me through electronic mail: <naparajith@duck.com> */}
-
-Page under active development
 
 import A from "@/components/A.astro";
 
@@ -58,11 +56,14 @@ principles of freedom and collaboration.
 
 ## Terms and Abbreviations
 
-| Term                          | Abbreviation  |
-| ----------------------------- | ------------- |
-| JavaScript                    | **JS**        |
-| kB                            | **KiloBytes** |
-| Free and Open Source Software | **FOSS**      |
+| Term                                  | Abbreviation  |
+| ------------------------------------- | ------------- |
+| JavaScript                            | **JS**        |
+| kB                                    | **KiloBytes** |
+| Free and Open Source Software         | **FOSS**      |
+| Massachuchets Institute of Technology | **MIT**       |
+| Berkley Software Distribution         | **BSD**       |
+| Operating System                      | **OS**        |
 
 ## Policy
 
@@ -115,3 +116,4 @@ Suggestions for improvement of this policy along with the necessary site wide
 changes will be appreciated. Please send comments to
 [naparajith@duck.com](mailto:naparajith@duck.com). Feedback provided is
 confidential and will not be used for any other purpose.
+
