--- a/src/content/policy/privacy-policy.mdx
+++ b/src/content/policy/privacy-policy.mdx
@@ -2,7 +2,7 @@
 title: Privacy Policy
 description: The official Privacy Policy for Naparajith's Portfolio
 created: 11-15-2024
-updated: 03-17-2025
+updated: 05-18-2025
 ---
 
 {/* This website is only meant to showcase the work and and skills of the
@@ -25,7 +25,33 @@ Contact me through electronic mail: <naparajith@duck.com> */}
 
 Page under active development
 
-## API Policy
+## Purpose
+
+This document outlines the API and link usage policies for this site. It is
+intended to clarify how third-party APIs and web links are utilized and governed
+within the site.
+
+## Scope
+
+This policy applies to all pages and functionalities of the website that
+interface with third-party APIs and include hyperlinks to both internal and
+external sources.
+
+## Terms and Abbreviations
+
+- **API**: Application Programming Interface
+- **FOSS**: Free and Open Source Software
+- **NSFW**: Not Safe For Work
+
+| Term                              | Abbreviation |
+| --------------------------------- | ------------ |
+| Application Programming Interface | **API**      |
+| Not Safe For Work                 | **NSFW**     |
+| Free and Open Source Software     | **FOSS**     |
+
+## Policy
+
+### API Usage
 
 This site references several third-party APIs to provide a better overall
 experience. An exhaustive list of such services may be found below:
@@ -33,34 +59,36 @@ experience. An exhaustive list of such services may be found below:
 1. GitHub REST API
 2. LeetCode GraphQL API
 
-## Link Policy
+### Link Policy
 
-Across the site, I have linked to various internal and external sources. I
-follow a set of policies while linking you to said sources. The policies are
-listed below.
+Across the site, various internal and external links are used. The policies
+governing these links are as follows:
 
-### Links to Internal Sources
+#### Links to Internal Sources
 
-1. All links within the website do not have any type of analytics or tracking
-   embedded.
-2. With internal links, what you see is what you get.
-3. Some JS may be fetched and executed to ensure a smooth and consistent
+1. All internal links do not have any type of analytics or tracking embedded.
+2. Internal links provide direct access to the intended content ("what you see
+   is what you get").
+3. JavaScript may be fetched and executed to ensure a smooth and consistent
    experience.
-4. The site and its various pages contain no NSFW or explicit content. All
-   content adheres to a strict code.
+4. All content is strictly moderated and does not include NSFW or explicit
+   material.
 
-### Links to External Sources
+#### Links to External Sources
 
-1. Any and all mentioned external links may contain non-free, commercial
-   JavaScript for cookies, analytics and tracking.
-2. I neither endorse nor reject any linked sites, their owners, their business
-   models, their personal or their political views unless explicitly stated.
-3. Externally linked sources may contain text, images or videos that may or may
-   not suite the viewer. Either way, I take zero responsibility for appealing to
-   or hurting the viewer's sentiments.
-4. No external links link to NSFW or explicit content. All content adheres to a
-   strict code.
+1. External links may contain non-free, commercial JavaScript for cookies,
+   analytics, and tracking.
+2. No endorsement or rejection is implied for any external links, their owners,
+   business models, or views unless explicitly stated.
+3. External content may contain text, images, or videos that could potentially
+   affect the viewer's sentiments. The site assumes no responsibility for such
+   impacts.
+4. No external links point to NSFW or explicit content. All external content is
+   held to the same standards as internal content.
 
-## Artificial Intelligence Policy
+## Feedback and Future Revisions
 
-![Brainmade.org](https://brainmade.org/white-logo.svg)
+Suggestions for improvement of this policy along with the necessary site wide
+changes will be appreciated. Please send comments to
+[naparajith@duck.com](mailto:naparajith@duck.com). Feedback provided is
+confidential and will not be used for any other purpose.
